--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -2,4 +2,9 @@ Django==1.9.5
 Markdown==2.6.6
 argparse==1.2.1
 djangorestframework==3.3.3
+gunicorn==19.4.5
+httplib2==0.9.2
+pytz==2016.3
+six==1.10.0
+twilio==5.4.0
 wsgiref==0.1.2
