Adding support for agent location tracking

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -150,3 +150,14 @@ startsecs=10
 stopwaitsecs=600
 killasgroup=true
 priority=998
+
+[program:celery_pubsub]
+command=/home/zuperfast/sites/139.59.138.253/virtualenv/bin/python /home/zuperfast/sites/139.59.138.253/source/subscribe.py
+stdout_logfile=/home/zuperfast/sites/139.59.138.253/logs/pubsub/pubsub.log
+stderr_logfile=/home/zuperfast/sites/139.59.138.253/logs/pubsub/pubsub_err.log
+autostart=true
+autorestart=true
+startsecs=10
+stopwaitsecs=600
+killasgroup=true
+priority=998
