--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -10,6 +10,8 @@ gunicorn==19.4.5
 httplib2==0.9.2
 kombu==3.0.35
 meld3==1.0.2
+pubnub==3.7.7
+pycrypto==2.6.1
 pytz==2016.3
 requests==2.10.0
 six==1.10.0
