--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -1,20 +1,51 @@
-Django==1.9.5
-Markdown==2.6.6
-amqp==1.4.9
-anyjson==0.3.3
+BeautifulSoup==3.2.1
+Fabric==1.8.2
+PAM==0.4.2
+Pillow==2.3.0
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+adium-theme-ubuntu==0.3.4
+apt-xapian-index==0.45
 argparse==1.2.1
-billiard==3.3.0.23
-celery==3.1.23
-djangorestframework==3.3.3
-gunicorn==19.4.5
-httplib2==0.9.2
-kombu==3.0.35
-meld3==1.0.2
-pubnub==3.7.7
+chardet==2.0.1
+colorama==0.2.5
+command-not-found==0.3
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+duplicity==0.6.23
+gyp==0.1
+html5lib==0.999
+httplib2==0.8
+lockfile==0.8
+lxml==3.3.3
+nose==1.3.1
+oauthlib==0.6.1
+oneconf==0.3.7.14.04.1
+paramiko==1.10.1
+pexpect==3.1
+piston-mini-client==0.7.5
+psutil==1.2.1
+pyOpenSSL==0.13
 pycrypto==2.6.1
-pytz==2016.3
-requests==2.10.0
-six==1.10.0
-supervisor==3.2.3
-twilio==5.4.0
+pycups==1.9.66
+pygobject==3.12.0
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt==0.9.3.5ubuntu1
+python-debian==0.1.21-nmu2ubuntu2
+pyxdg==0.25
+reportlab==3.0
+requests==2.2.1
+sessioninstaller==0.0.0
+six==1.5.2
+software-center-aptd-plugins==0.0.0
+system-service==0.1.6
+unity-lens-photos==1.0
+urllib3==1.7.1
+vboxapi==1.0
+virtualenv==1.11.4
+wheel==0.24.0
 wsgiref==0.1.2
+xdiagnose==3.6.3build2
+zope.interface==4.0.5
